# DonutStats

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
docs/: functions.md
examples/: discord_cog_stats.py  get_single_stat.py  get_stats.py  lookup.py
src/DonutStats/: __init__.py  donutstats.py  exceptions.py  utils.py
src/donutstats/: __init__.py  donutstats.py  utils.py
tests/: test_donutstats.py
