[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donutstats"
version = "1.1.1"
description = "Async client for the DonutSMP API"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "optccopa" }]
keywords = ["donutsmp", "minecraft", "stats", "async"]
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
discord = ["discord.py>=2.0"]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/optccopa/donutstats"
Issues = "https://github.com/optccopa/donutstats/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/donutstats"]
